force-app/main/default/objects/Contact/fields/Abila_Contact_Billing_ID__c.field-meta.xml
<CustomField>
    <fullName>Abila_Contact_Billing_ID__c</fullName>
    <inlineHelpText>4 digit unique ID for billing contact iD for Abila starting with 6000, will be unique for each billing contact that has a different billing address</inlineHelpText>
    <label>Abila Contact Billing ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>