force-app/main/default/objects/Contact/fields/Ability_Rating_del__c.field-meta.xml
<CustomField>
    <fullName>Ability_Rating_del__c</fullName>
    <label>Ability Rating</label>
    <length>120</length>
    <type>Text</type>
</CustomField>