force-app/main/default/objects/Contact/fields/Account_HH_RecordType_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_HH_RecordType_ID__c</fullName>
    <formula>Account.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account HH RecordType ID</label>
    <type>Text</type>
</CustomField>