force-app/main/default/objects/Contact/fields/Additional_Address_Description__c.field-meta.xml
<CustomField>
    <fullName>Additional_Address_Description__c</fullName>
    <inlineHelpText>e.g. Summer home, winter home, second business, etc.</inlineHelpText>
    <label>Additional Address Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>