force-app/main/default/objects/Contact/fields/Additional_City__c.field-meta.xml
<CustomField>
    <fullName>Additional_City__c</fullName>
    <label>Additional City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>