force-app/main/default/objects/Contact/fields/Additional_Country__c.field-meta.xml
<CustomField>
    <fullName>Additional_Country__c</fullName>
    <label>Additional Country</label>
    <length>64</length>
    <type>Text</type>
</CustomField>