force-app/main/default/objects/Contact/fields/Additional_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Additional_Postal_Code__c</fullName>
    <label>Additional Zip/Postal Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>