force-app/main/default/objects/Contact/fields/Additional_State__c.field-meta.xml
<CustomField>
    <fullName>Additional_State__c</fullName>
    <inlineHelpText>(2 letter abbreviation)</inlineHelpText>
    <label>Additional State/Province</label>
    <length>10</length>
    <type>Text</type>
</CustomField>