force-app/main/default/objects/Contact/fields/Additional_Street__c.field-meta.xml
<CustomField>
    <fullName>Additional_Street__c</fullName>
    <label>Additional Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>