force-app/main/default/objects/Contact/fields/Address_Now_On_Household__c.field-meta.xml
<CustomField>
    <fullName>Address_Now_On_Household__c</fullName>
    <formula>&quot;Please right-click to update household address:&quot; &amp; HYPERLINK(&quot;https://yearup.my.salesforce.com/&quot; &amp; AccountId ,  Account.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Now on Household</label>
    <type>Text</type>
</CustomField>