force-app/main/default/objects/Contact/fields/Addressee__c.field-meta.xml
<CustomField>
    <fullName>Addressee__c</fullName>
    <description>To whom should mailings be addressed?</description>
    <inlineHelpText>To whom should mailings be addressed? (Leave blank for Firstname Lastname.)</inlineHelpText>
    <label>Addressee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>