force-app/main/default/objects/Contact/fields/ADP_Associate_ID__c.field-meta.xml
<CustomField>
    <fullName>ADP_Associate_ID__c</fullName>
    <description>Use this number to triangulate matching from ADP to Salesforce. The Contact ID is being imported to ADP for the third matching criteria.</description>
    <inlineHelpText>File # in ADP</inlineHelpText>
    <label>ADP Associate ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>