force-app/main/default/objects/Contact/fields/ADP_Number__c.field-meta.xml
<CustomField>
    <fullName>ADP_Number__c</fullName>
    <label>ADP Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>