force-app/main/default/objects/Contact/fields/ADP_Number_Temp_Field__c.field-meta.xml
<CustomField>
    <fullName>ADP_Number_Temp_Field__c</fullName>
    <description>This field is only being used to troubleshoot ADP number discrepancies on 9/30/15. Delete this field when issue resolved.</description>
    <inlineHelpText>This field is only being used to troubleshoot ADP number discrepancies on 9/30/15. Delete this field when issue resolved.</inlineHelpText>
    <label>ADP Number Temp Field</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>