force-app/main/default/objects/Contact/fields/Affinity_rating__c.field-meta.xml
<CustomField>
    <fullName>Affinity_rating__c</fullName>
    <label>Affinity rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High - Closest friends and supporters; Year Up is their top philanthropy</fullName>
            </value>
            <value>
                <fullName>Medium High - Donors giving near capacity with enthusiasm, but not their top philanthropy</fullName>
            </value>
            <value>
                <fullName>Medium - Donors but not giving at significant levels; requires significant cultivation</fullName>
            </value>
            <value>
                <fullName>Low - Little Development contact; or displayed minimal interest</fullName>
            </value>
            <value>
                <fullName>Unknown - Unqualified; requires research analysis and/or a Development Officer contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>