force-app/main/default/objects/Contact/fields/Alumni_Update_Unique_URL__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Update_Unique_URL__c</fullName>
    <inlineHelpText>This is the url for form assembly for alumni to link to the survey</inlineHelpText>
    <label>Alumni Update Unique URL</label>
    <type>Url</type>
</CustomField>