force-app/main/default/objects/Contact/fields/Anonymous_donor__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_donor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the donor wishes all gifts to be anonymous</inlineHelpText>
    <label>Donor wishes to remain anonymous</label>
    <type>Checkbox</type>
</CustomField>