force-app/main/default/objects/Contact/fields/Bad_Address__c.field-meta.xml
<CustomField>
    <fullName>Bad_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate mail was returned because of a bad address</description>
    <inlineHelpText>Check this box when mail to the contact&apos;s address is returned</inlineHelpText>
    <label>Bad Address</label>
    <type>Checkbox</type>
</CustomField>