force-app/main/default/objects/Contact/fields/Bad_Email__c.field-meta.xml
<CustomField>
    <fullName>Bad_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to signify whether the email address (Email) is undeliverable.</description>
    <inlineHelpText>If checked, the email address was undeliverable.</inlineHelpText>
    <label>Bad Email Address</label>
    <type>Checkbox</type>
</CustomField>