force-app/main/default/objects/Contact/fields/Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>Birth_Year__c</fullName>
    <description>What is the birth year of the donor? For more details see cases CA-08756 and CA-08946.</description>
    <inlineHelpText>What is the birth year of the donor?</inlineHelpText>
    <label>Birth Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>