force-app/main/default/objects/Contact/fields/Birthdate_Map__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Map__c</fullName>
    <label>Birthdate Map</label>
    <type>Date</type>
</CustomField>