force-app/main/default/objects/Contact/fields/Birthday_This_Calendar_Year__c.field-meta.xml
<CustomField>
    <fullName>Birthday_This_Calendar_Year__c</fullName>
    <description>Identifies the contact&apos;s birthday during this calendar year -- useful for &quot;birthdays this month&quot; reports/celebrations.</description>
    <formula>IF(

/* special case for Leap Day birthdays. Good until 2100 */
AND(month(Birthdate) = 2, day(Birthdate) = 29),
IF(MOD(YEAR(TODAY()) ,4) = 0, /* Today is less than 3/1; is this year a leap year? */
DATE(YEAR(TODAY()), 2, 29),
DATE(YEAR(TODAY()), 2, 28)),

/* normal non-leap year case: */
DATE(YEAR(TODAY()),month(Birthdate),DAY(Birthdate))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday This Calendar Year</label>
    <type>Date</type>
</CustomField>