force-app/main/default/objects/Contact/fields/btydev__Picture__c.field-meta.xml
<CustomField>
    <fullName>btydev__Picture__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; btydev__Picture_Id__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>