force-app/main/default/objects/Contact/fields/btydev__Picture_Id__c.field-meta.xml
<CustomField>
    <fullName>btydev__Picture_Id__c</fullName>
    <description>Id of the picture uploaded for this record</description>
    <label>Picture Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>