force-app/main/default/objects/Contact/fields/Bullhorn_ID__c.field-meta.xml
<CustomField>
    <fullName>Bullhorn_ID__c</fullName>
    <description>ID of the person in Bullhorn.</description>
    <inlineHelpText>ID of the person in Bullhorn.</inlineHelpText>
    <label>Bullhorn_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>