force-app/main/default/objects/Contact/fields/Bullhorn_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Bullhorn_Integration_Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>Bullhorn_Integration_Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>