force-app/main/default/objects/Contact/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <label>Campus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North Campus</fullName>
            </value>
            <value>
                <fullName>Wolfson Campus</fullName>
            </value>
            <value>
                <fullName>Borough of Manhattan Community College</fullName>
            </value>
            <value>
                <fullName>Wall Street</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>