force-app/main/default/objects/Contact/fields/Cause_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Death__c</fullName>
    <label>Cause of Death</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Natural causes</fullName>
            </value>
            <value>
                <fullName>Violence</fullName>
            </value>
            <value>
                <fullName>Suicide</fullName>
            </value>
            <value>
                <fullName>Overdose/Substance abuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>