force-app/main/default/objects/Contact/fields/CCID__c.field-meta.xml
<CustomField>
    <fullName>CCID__c</fullName>
    <description>Cambridge College or other external partner ID#.  Added back in by LG 6.23.15 per business request.</description>
    <inlineHelpText>Cambridge College or other external partner ID#.</inlineHelpText>
    <label>College Partner ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>