force-app/main/default/objects/Contact/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <description>Cohort of the student&apos;s most recent engagement.</description>
    <label>Most Recent Cohort</label>
    <length>16</length>
    <type>Text</type>
</CustomField>