force-app/main/default/objects/Contact/fields/College_Degree__c.field-meta.xml
<CustomField>
    <fullName>College_Degree__c</fullName>
    <label>College Degree?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Associate&apos;s degree</fullName>
            </value>
            <value>
                <fullName>Bachelor’s degree or higher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>