force-app/main/default/objects/Contact/fields/Connector__c.field-meta.xml
<CustomField>
    <fullName>Connector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>person that connected Year Up with a potential donor</description>
    <inlineHelpText>Person that introduced this contact to Year Up</inlineHelpText>
    <label>Connector</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Development Connections</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>