force-app/main/default/objects/Contact/fields/Contact_Center_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Center_Call_Count__c</fullName>
    <description>Pulled from the Lead when converted</description>
    <label>Contact Center Call Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>