force-app/main/default/objects/Contact/fields/Contact_Record_Type_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Type_Conversion__c</fullName>
    <label>Contact Record Type Conversion</label>
    <length>55</length>
    <type>Text</type>
</CustomField>