force-app/main/default/objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <inlineHelpText>Select as many roles that this contact may perform.</inlineHelpText>
    <label>Contact Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Assigned Board Member</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>CE Connection</fullName>
            </value>
            <value>
                <fullName>Coach Influencer</fullName>
            </value>
            <value>
                <fullName>Committee Chair</fullName>
            </value>
            <value>
                <fullName>Committee Member</fullName>
            </value>
            <value>
                <fullName>Contract Facilitator</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Financial Decision Maker</fullName>
            </value>
            <value>
                <fullName>Founders Circle</fullName>
            </value>
            <value>
                <fullName>Grads of Life - Employer</fullName>
            </value>
            <value>
                <fullName>Grads of Life - Funder</fullName>
            </value>
            <value>
                <fullName>Grads of Life - General</fullName>
            </value>
            <value>
                <fullName>Grads of Life - Government</fullName>
            </value>
            <value>
                <fullName>Grads of Life - Partner</fullName>
            </value>
            <value>
                <fullName>Grads of Life - Partner Directory</fullName>
            </value>
            <value>
                <fullName>Grads of Life - Success Story</fullName>
            </value>
            <value>
                <fullName>Grant Officer</fullName>
            </value>
            <value>
                <fullName>Individual Donor</fullName>
            </value>
            <value>
                <fullName>Local Board Member</fullName>
            </value>
            <value>
                <fullName>Major Donor</fullName>
            </value>
            <value>
                <fullName>Matching Gift</fullName>
            </value>
            <value>
                <fullName>National Board Member</fullName>
            </value>
            <value>
                <fullName>Officer</fullName>
            </value>
            <value>
                <fullName>Organizational Influencer</fullName>
            </value>
            <value>
                <fullName>Planned Giving Donor</fullName>
            </value>
            <value>
                <fullName>Site Representative</fullName>
            </value>
            <value>
                <fullName>Soft Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>