force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <description>Indicates overall state of Year Up&apos;s connection with an individual - not what we do with the person (eg, solicit donations vs engage in our program), just how &quot;live&quot; a connection we have.

- Business &amp; general contacts, with record type &quot;Individual,&quot; use values: {Nurture-Suspect, Active, Inactive, Do Not Contact, Duplicate, No Longer At Company, Deceased, Active Prospect/Donor}

- Donor management, two impt values are Nurture-Suspect &amp; Active. We mark a new contact as Nurture-Suspect at the beginning of a relationship. An Active donor has contributed. There are no validation rules or restrictions on assignment of values. (QUESTION: does “Active Prospect/Donor” have meaning?)

- Prospective &amp; current students, use values: {Active, Do Not Contact, Duplicate, No Longer At Company, Deceased}. These categories overlap w/status on student&apos;s current Engagement. At present, use Engagement Status for reporting.

(CE doesn’t use Contact Status, last cked Spr ‘16)

 - SB 1/4/17</description>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Active Prospect/Donor</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Disqualified from Major Giving</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>No Longer At Company</fullName>
            </value>
            <value>
                <fullName>Nurture-Suspect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>