force-app/main/default/objects/Contact/fields/Converted_Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead_Stage__c</fullName>
    <description>It describes the stage of the lead when it got converted to this contact</description>
    <label>Converted Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interest Form Submitted</fullName>
            </value>
            <value>
                <fullName>Info Session Scheduled</fullName>
            </value>
            <value>
                <fullName>Info Session Attended</fullName>
            </value>
            <value>
                <fullName>Info Session Cancelled</fullName>
            </value>
            <value>
                <fullName>Info Session Waived</fullName>
            </value>
            <value>
                <fullName>Info Session No Show</fullName>
            </value>
            <value>
                <fullName>Referred Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>