force-app/main/default/objects/Contact/fields/Count_of_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Affiliations__c</fullName>
    <label>Count of Affiliations</label>
    <summaryForeignKey>npe5__Affiliation__c.npe5__Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>