force-app/main/default/objects/Contact/fields/Current_ABILA_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Current_ABILA_Billing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box for the Workflow rule for updating the billing contact ID with the Unique 4 digit ID starting with 6. 
This field will be deleted after the workflow rule is ran and the trigger is in place.</description>
    <inlineHelpText>ABILA Billing Contact Activation box.</inlineHelpText>
    <label>Current ABILA Billing Contact</label>
    <type>Checkbox</type>
</CustomField>