force-app/main/default/objects/Contact/fields/Current_Admissions_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Current_Admissions_Cohort__c</fullName>
    <description>Determines if the prospective student is in the current admissions cohort. If the Most Recent Cohort field and the Current Admissions Cohort field on the associated site record are the same returns a &quot;Yes&quot;, if not &quot;No&quot;.</description>
    <formula>IF( Cohort__c = TEXT( Site_Location__r.Current_Admissions_Cohort__c),&quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines if the prospective student is in the current admissions cohort. If the Most Recent Cohort field and the Current Admissions Cohort field on the associated site record are the same returns a &quot;Yes&quot;, if not &quot;No&quot;.</inlineHelpText>
    <label>Current Admissions Cohort?</label>
    <type>Text</type>
</CustomField>