force-app/main/default/objects/Contact/fields/Current_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Current Date</label>
    <type>Date</type>
</CustomField>