force-app/main/default/objects/Contact/fields/Data_Quality_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Description__c</fullName>
    <description>//IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Mailing_Label_Street__c) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)

//IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Mailing_Label_Street__c) = 0, &quot;Street, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Mailing_Label_City__c) = 0, &quot;City, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Mailing_Label_State__c) = 0, &quot;State, &quot;,&quot;&quot;)</description>
    <formula>IF( Data_Quality_Score__c =60,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;  IF( LEN(MailingState) = 0,&quot;State, &quot;,&quot;&quot; ))</formula>
    <label>Data Quality Description</label>
    <type>Text</type>
</CustomField>