force-app/main/default/objects/Contact/fields/Date_Info_Session_Attend__c.field-meta.xml
<CustomField>
    <fullName>Date_Info_Session_Attend__c</fullName>
    <description>used by marketo</description>
    <label>Date Info Session Attend</label>
    <type>Date</type>
</CustomField>