force-app/main/default/objects/Contact/fields/Date_of_Gift_Capacity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Gift_Capacity_Rating__c</fullName>
    <inlineHelpText>Please enter the date of the rating</inlineHelpText>
    <label>Date of Gift Capacity Rating</label>
    <type>Date</type>
</CustomField>