force-app/main/default/objects/Contact/fields/Deactivate_Application_Password__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Application_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate Application Password</label>
    <type>Checkbox</type>
</CustomField>