force-app/main/default/objects/Contact/fields/Desired_Start__c.field-meta.xml
<CustomField>
    <fullName>Desired_Start__c</fullName>
    <inlineHelpText>Select the upcoming Cohort Session</inlineHelpText>
    <label>Desired Start</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>July 2016</fullName>
            </value>
            <value>
                <fullName>Jan 2017</fullName>
            </value>
            <value>
                <fullName>July 2017</fullName>
            </value>
            <value>
                <fullName>Jan 2018</fullName>
            </value>
            <value>
                <fullName>July 2018</fullName>
            </value>
            <value>
                <fullName>Jan 2019</fullName>
            </value>
            <value>
                <fullName>July 2019</fullName>
            </value>
            <value>
                <fullName>Jan 2020</fullName>
            </value>
            <value>
                <fullName>July 2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>