force-app/main/default/objects/Contact/fields/Development_Owner__c.field-meta.xml
<CustomField>
    <fullName>Development_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Development Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>