force-app/main/default/objects/Contact/fields/Development_Site__c.field-meta.xml
<CustomField>
    <fullName>Development_Site__c</fullName>
    <formula>TEXT(Development_Owner__r.Site__c)</formula>
    <label>Development Site</label>
    <type>Text</type>
</CustomField>