force-app/main/default/objects/Contact/fields/Devo_Temp__c.field-meta.xml
<CustomField>
    <fullName>Devo_Temp__c</fullName>
    <label>Devo Temp</label>
    <length>55</length>
    <type>Text</type>
</CustomField>