force-app/main/default/objects/Contact/fields/Do_Not_Email_del__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Email_del__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>C&amp;P</inlineHelpText>
    <label>Do Not Email</label>
    <type>Checkbox</type>
</CustomField>