force-app/main/default/objects/Contact/fields/Do_Not_Invite_to_Events__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Invite_to_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Invite to Events</label>
    <type>Checkbox</type>
</CustomField>