force-app/main/default/objects/Contact/fields/Do_not_text__c.field-meta.xml
<CustomField>
    <fullName>Do_not_text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not text</label>
    <type>Checkbox</type>
</CustomField>