force-app/main/default/objects/Contact/fields/DoNotMail__c.field-meta.xml
<CustomField>
    <fullName>DoNotMail__c</fullName>
    <label>DoNotMail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>