force-app/main/default/objects/Contact/fields/DS360oi__DS_update__c.field-meta.xml
<CustomField>
    <fullName>DS360oi__DS_update__c</fullName>
    <label>DS update?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>