force-app/main/default/objects/Contact/fields/DS360oi__DS_update_date__c.field-meta.xml
<CustomField>
    <fullName>DS360oi__DS_update_date__c</fullName>
    <label>DS update date</label>
    <type>DateTime</type>
</CustomField>