force-app/main/default/objects/Contact/fields/DS360oi__Middle_Initial_Name__c.field-meta.xml
<CustomField>
    <fullName>DS360oi__Middle_Initial_Name__c</fullName>
    <label>Middle Initial/Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>