force-app/main/default/objects/Contact/fields/DS360oi__X5_Postal_code__c.field-meta.xml
<CustomField>
    <fullName>DS360oi__X5_Postal_code__c</fullName>
    <formula>VALUE(LEFT( MailingPostalCode ,5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5 Postal code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>