force-app/main/default/objects/Contact/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <description>Second email address.
Internship email.</description>
    <label>Internship Email</label>
    <type>Email</type>
</CustomField>