force-app/main/default/objects/Contact/fields/Email3__c.field-meta.xml
<CustomField>
    <fullName>Email3__c</fullName>
    <description>Year Up email address for students</description>
    <label>Year Up Email</label>
    <type>Email</type>
</CustomField>