force-app/main/default/objects/Contact/fields/Emergency_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Information__c</fullName>
    <label>Emergency Contact Information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>