force-app/main/default/objects/Contact/fields/EmployerAccount__c.field-meta.xml
<CustomField>
    <fullName>EmployerAccount__c</fullName>
    <formula>IF( 
NOT(ISBLANK( npsp__Primary_Affiliation__c )), 
HYPERLINK(&quot;/&quot; &amp; npsp__Primary_Affiliation__c, 
BLANKVALUE(npsp__Primary_Affiliation__r.Name, &quot;&quot;) 
), 
IF( 
NOT(ISBLANK( AccountId )), 
HYPERLINK(&quot;/&quot; &amp; AccountId, 
BLANKVALUE(Account.Name, &quot;&quot;) 
),NULL 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer/Account</label>
    <type>Text</type>
</CustomField>