force-app/main/default/objects/Contact/fields/Employment_Higher_Ed_Summary__c.field-meta.xml
<CustomField>
    <fullName>Employment_Higher_Ed_Summary__c</fullName>
    <description>Summary of student&apos;s current or last-known employment and/or college status.
Added by in by LG 6.23.15 for the business.</description>
    <inlineHelpText>Summary of student&apos;s current or last-known employment and/or college status.</inlineHelpText>
    <label>Employment/Higher Ed Summary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Currently working FT and in school FT</fullName>
            </value>
            <value>
                <fullName>Currently working FT and in school PT</fullName>
            </value>
            <value>
                <fullName>Currently working PT and in school FT</fullName>
            </value>
            <value>
                <fullName>Currently working PT and in school PT</fullName>
            </value>
            <value>
                <fullName>Currently working FT and not in school</fullName>
            </value>
            <value>
                <fullName>Currently working PT and not in school</fullName>
            </value>
            <value>
                <fullName>Currently out of work and in school FT</fullName>
            </value>
            <value>
                <fullName>Currently out of work and in school PT</fullName>
            </value>
            <value>
                <fullName>Currently out of work and not in school</fullName>
            </value>
            <value>
                <fullName>No current employment/school information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>